--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     -->
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Adamina&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
