--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Adamina&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Brion Envision</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
